<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Messenger App</string>
    <string name="db_location">https://ge-itodadze-messengerapp-default-rtdb.asia-southeast1.firebasedatabase.app</string>

    <!-- signing strings -->
    <string name="avatar_placeholder_desc">Placeholder for avatar</string>
    <string name="nickname_hint">Enter your nickname</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registration_question_text">Not registered?</string>
    <string name="profession_hint">What I do</string>

    <!-- chat strings -->
    <string name="back_button_desc">Return to main page</string>
    <string name="chat_nickname_placeholder">Nickname</string>
    <string name="chat_profession_placeholder">Profession</string>
    <string name="chat_avatar_desc">Avatar</string>
    <string name="chat_send_text_button_desc">Send message</string>
    <string name="chat_hint">Enter message</string>
    <string name="default_time">12:00</string>
    <string name="default_message">Message</string>

    <!-- main strings -->
    <string name="fab_desc">Fab</string>
    <string name="update">Update</string>
    <string name="sign_out">SIGN OUT</string>

    <!-- search strings -->
    <string name="avatar_desc">Avatar photo</string>
    <string name="search_nickname_placeholder">Nickname</string>
    <string name="search_profession_placeholder">Profession</string>
    <string name="search_back_desc">Return to home page</string>
    <string name="search_hint">Search</string>

    <string name="date_placeholder">DATE</string>

</resources>