<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:contentDescription="@string/avatar_desc"
        android:id="@+id/avatar"
        android:layout_width="@dimen/search_profile_picture_width"
        android:layout_height="@dimen/search_profile_picture_width"
        android:layout_marginTop="@dimen/home_side_margin"
        android:layout_marginBottom="@dimen/home_side_margin"
        android:layout_marginStart="@dimen/home_side_margin"
        android:src="@drawable/avatar_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/nickname"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_text_top"
        android:layout_marginBottom="@dimen/home_side_margin"
        android:layout_marginStart="@dimen/search_text_start_margin"
        android:maxLines="@integer/one"
        android:text="@string/search_nickname_placeholder"
        android:textColor="@color/black"
        android:textSize="@dimen/search_large_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        />

    <TextView
        android:id="@+id/profession"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_list_item_inner_vertical_margin"
        android:layout_marginStart="@dimen/search_text_start_margin"
        android:maxLines="@integer/one"
        android:text="@string/search_profession_placeholder"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/search_small_text"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>